# tunip

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  deploy.sh  deploy.sh.template  generate_build_file.py  install.sh  install.sh.template  requirements-bazel.txt  requirements.py36.txt  requirements.txt  setup.py  setup.py36.py  update_versions.py
src/tunip/: BUILD.bazel  Hangulpy.py  __init__.py  alert_utils.py  aws_utils.py  config.py  constants.py  corpus_utils.py  corpus_utils_v2.py  datetime_utils.py  dfs_utils.py  document_utils.py  env.py  es_utils.py  feature_path_utils.py  file_utils.py  fuzzy_match.py  gold.py  google_cloud_utils.py  google_pubsub_utils.py  gsheet_utils.py  gzip_utils.py  hash_utils.py  iter_utils.py  log_decorators.py  log_pubsub.py  log_trx.py  logger.py  matplotlib_env.py  model_uploader.py  np_op_utils.py  nugget_api.py  nugget_utils.py  object_factory.py  orjson_utils.py  package_utils.py  path_utils.py  preprocess.py  proc_utils.py  pydantic_utils.py  (+15 more)
src/tunip/corpus/: __init__.py  corpus_path_provider.py  entity_corpus_record.py
src/tunip/entity/: __init__.py  anchor_sets.py  anchors.py  entities.py  entity_sets.py  merge.py  meta_source.py  span_sets.py  spans.py
src/tunip/model/: feature_schema.py
src/tunip/path/: __init__.py  mart.py  path_getter.py  vector_set.py  warehouse.py
src/tunip/path/lake/: __init__.py  corpus.py  document.py  knowledge.py  kws.py  meta.py  pool.py  serp.py  tagged_entity.py
src/tunip/path/mart/: __init__.py  factory.py  vector.py
src/tunip/path/warehouse/: __init__.py  factory.py
src/tunip/spark/: __init__.py  aws.py  factory.py  gcp.py
src/tunip/task/: eval_task_set.py  task_def.py
src/tunip/test/: __init__.py
src/tunip/test/tunip/: BUILD.bazel  test_corpus_utils_v2.py  test_datetime_utils.py  test_document_utils.py  test_es_utils.py  test_es_utils_requests.py  test_file_utils.py  test_file_utils_gcs.py  test_file_utils_s3.py  test_google_cloud_utils.py  test_google_pubsub.py  test_gsheet.py  test_hangul.py  test_nugget.py  test_nugget_api.py  test_nugget_utils.py  test_path_utils.py  test_preprocess.py  test_remove_words.py  test_s3.py  test_service_config.py  test_snapshot_utils.py  test_spark_utils.py  test_yaml_loader.py
src/tunip/test/tunip/entity/: test_anchor_sets.py  test_entity_distinct.py  test_entity_sets.py  test_merge.py
src/tunip/test/tunip/model/: test_feature_schema.py  test_load_model_schema_from_dict.py
src/tunip/test/tunip/path/: test_mart.py  test_path_getter.py  test_warehouse.py
test/: __init__.py
(+10 files in other folders)
