workspace(name = "tunip")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")


# Bazel rules_python (Python 관련 룰셋 추가)
http_archive(
    name = "rules_python",
    sha256 = "690e0141724abb568267e003c7b6d9a54925df40c275a870a4d934161dc9dd53",
    strip_prefix = "rules_python-0.40.0",
    url = "https://github.com/bazelbuild/rules_python/releases/download/0.40.0/rules_python-0.40.0.tar.gz",
)

# rules_python 설정
load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")

py_repositories()


http_archive(
    name = "aspect_rules_py",
    sha256 = "59446563a724b1cb449a604c8fbcd85e18a7001e9bb230ef59d78154886ad8cc",
    strip_prefix = "rules_py-0.7.3",
    url = "https://github.com/aspect-build/rules_py/releases/download/v0.7.3/rules_py-v0.7.3.tar.gz",
)

load("@aspect_rules_py//py:repositories.bzl", "rules_py_dependencies")

rules_py_dependencies()

load("@aspect_rules_py//py:toolchains.bzl", "rules_py_toolchains")

rules_py_toolchains()


python_register_toolchains(
    name="python3_11",
    python_version="3.11",
    register_coverage_tool = True,
)


load("@python3_11//:defs.bzl", "interpreter")
load("@rules_python//python:pip.bzl", "pip_parse")

pip_parse(
	name="pip_deps",
	enable_implicit_namespace_pkgs = True,
	python_interpreter_target = interpreter,
	requirements_lock = "//:requirements-bazel.txt",
)

load("@pip_deps//:requirements.bzl", "install_deps")

install_deps()
