load("@aspect_rules_py//py:defs.bzl", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

#py_library(
#  name = "tunip",
#  srcs = glob(["**/*.py"]),
#  deps = [
#    ":setuptools",
#  ]
#)

py_library(
  name = "yaml_loader",
  srcs = ["yaml_loader.py"],
  deps = [
    "@pip_deps//omegaconf"
  ]
)

#py_test(
#  name = "yaml_loader_test",
#  srcs = ["//src/tunip/test/tunip/test_yaml_loader.py"],
#  deps = [
#    ":tunip",
#    ":yaml_loader",
#  ]
#)
